--- a/source/index.html
+++ b/source/index.html
@@ -1368,7 +1368,7 @@
             <h3 class="form__title form__title--light">Напишите нам</h3>
             <p class="form__intro form__intro--light">Оставьте ваши контакты, если у вас остались вопросы — мы на них ответим!</p>
 
-            <form class="modal__form" action="https://echo.htmlacademy.ru" method="post">
+            <form class="form__form form__form-modal" action="https://echo.htmlacademy.ru" method="post">
 
               <div class="form__item form__item-light">
                 <label class="form__label form__label-light form__label-name" for="name-modal">Имя</label>
