add form and modal form

--- a/source/index.html
+++ b/source/index.html
@@ -1243,7 +1243,7 @@
                 <div class="form__item form__item-select">
                   <label class="form__label form__label-city" for="city-button">Выберите город</label>
                   <select class="form__select-list-hidden" id="city-button" name="city" tabindex="-1">
-                    <option value="empty"></option>
+                    <option value="empty">Город не выбран</option>
                     <option value="moscow">Москва</option>
                     <option value="saint-petersburg">Санкт-Петербург</option>
                     <option value="tbilisi">Тбилиси</option>
