Update sprites way

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -689,7 +689,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -717,7 +717,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -744,7 +744,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -770,7 +770,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -798,7 +798,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -826,7 +826,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -853,7 +853,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -879,7 +879,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -895,7 +895,7 @@
             <button class="news__button-navigation news__button-navigation--prev slider-navigation__button slider-navigation__button--prev button-reset swiper-button swiper-button-prev" type="button">
               <span class="visually-hidden">Предыдущий слайд.</span>
               <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
-                <use href="/assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
+                <use href="assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
               </svg>
             </button>
 
@@ -908,7 +908,7 @@
             <button class="news__button-navigation news__button-navigation--next slider-navigation__button slider-navigation__button--next button-reset swiper-button swiper-button-next" type="button">
               <span class="visually-hidden">Следующий слайд.</span>
               <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
-                <use href="/assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
+                <use href="assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
               </svg>
             </button>
           </div>
