Update sprites way

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <span>Подробнее</span>
                         <span class="button__icon">
                           <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                            <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                            <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                           </svg>
                         </span>
                       </a>
@@ -170,7 +170,7 @@
                         <span>Подробнее</span>
                         <span class="button__icon">
                           <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                            <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                            <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                           </svg>
                         </span>
                       </a>
@@ -209,7 +209,7 @@
                         <span>Подробнее</span>
                         <span class="button__icon">
                           <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                            <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                            <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                           </svg>
                         </span>
                       </a>
@@ -245,7 +245,7 @@
                 <span>Подробнее о проекте</span>
                 <span class="button__icon">
                   <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                    <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                    <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                   </svg>
                 </span>
               </button>
@@ -298,14 +298,14 @@
               <button class="programs__button-navigation programs__button-navigation--prev slider-navigation__button slider-navigation__button--prev button-reset swiper-button swiper-button-prev" type="button">
                 <span class="visually-hidden">Предыдущий слайд.</span>
                 <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
-                  <use href="/assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
+                  <use href="assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
                 </svg>
               </button>
 
               <button class="programs__button-navigation programs__button-navigation--next slider-navigation__button slider-navigation__button--next button-reset swiper-button swiper-button-next" type="button">
                 <span class="visually-hidden">Следующий слайд.</span>
                 <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
-                  <use href="/assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
+                  <use href="assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
                 </svg>
               </button>
             </div>
@@ -333,7 +333,7 @@
                     <a class="programs__button-icon button-icon" href="#">
                       <span class="visually-hidden">Подробнее</span>
                       <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                        <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                        <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                       </svg>
                     </a>
                   </div>
@@ -360,7 +360,7 @@
                     <a class="programs__button-icon button-icon" href="#">
                       <span class="visually-hidden">Подробнее</span>
                       <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                        <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                        <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                       </svg>
                     </a>
                   </div>
@@ -386,7 +386,7 @@
                     <a class="programs__button-icon button-icon" href="#">
                       <span class="visually-hidden">Подробнее</span>
                       <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                        <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                        <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                       </svg>
                     </a>
                   </div>
@@ -412,7 +412,7 @@
                     <a class="programs__button-icon button-icon" href="#">
                       <span class="visually-hidden">Подробнее</span>
                       <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                        <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                        <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                       </svg>
                     </a>
                   </div>
@@ -438,7 +438,7 @@
                     <a class="programs__button-icon button-icon" href="#">
                       <span class="visually-hidden">Подробнее</span>
                       <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                        <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                        <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                       </svg>
                     </a>
                   </div>
@@ -464,7 +464,7 @@
                     <a class="programs__button-icon button-icon" href="#">
                       <span class="visually-hidden">Подробнее</span>
                       <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                        <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                        <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                       </svg>
                     </a>
                   </div>
@@ -483,7 +483,7 @@
               <span>Все программы</span>
               <span class="button__icon">
                 <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
-                  <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                  <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                 </svg>
               </span>
             </a>
@@ -580,7 +580,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -608,7 +608,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -635,7 +635,7 @@
                       <a class="news__button-icon button-icon" href="#">
                         <span class="visually-hidden">Подробнее</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                          <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                          <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                         </svg>
                       </a>
                     </div>
@@ -1010,14 +1010,14 @@
               <button class="reviews__button-navigation reviews__button-navigation--prev slider-navigation__button slider-navigation__button--prev button-reset swiper-button swiper-button-prev" type="button">
                 <span class="visually-hidden">Предыдущий слайд.</span>
                 <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
-                  <use href="/assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
+                  <use href="assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
                 </svg>
               </button>
 
               <button class="reviews__button-navigation reviews__button-navigation--next slider-navigation__button slider-navigation__button--next button-reset swiper-button swiper-button-next" type="button">
                 <span class="visually-hidden">Следующий слайд.</span>
                 <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
-                  <use href="/assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
+                  <use href="assets/spritemap.d0071e04.svg#sprite-slider-arrow"></use>
                 </svg>
               </button>
             </div>
@@ -1255,7 +1255,7 @@
                   <span>Отправить</span>
                   <span class="button-light__icon-light">
                     <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                      <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                      <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                     </svg>
                   </span>
                 </button>
@@ -1315,7 +1315,7 @@
               <a class="social__link link" href="https://vk.com/htmlacademy" aria-label="Вконтакте." target="_blank" rel="noreferrer noopener">
                 <svg class="social__icon" width="26" height="26">
                   <title class="visually-hidden">Иконка соцсети Вконтакте.</title>
-                  <use href="/assets/spritemap.d0071e04.svg#sprite-vk"></use>
+                  <use href="assets/spritemap.d0071e04.svg#sprite-vk"></use>
                 </svg>
               </a>
             </li>
@@ -1323,7 +1323,7 @@
               <a class="social__link link" href="https://ok.ru/htmlacademy" aria-label="Одноклассники." target="_blank" rel="noreferrer noopener">
                 <svg class="social__icon" width="26" height="26">
                   <title class="visually-hidden">Иконка соцсети Одноклассники.</title>
-                  <use href="/assets/spritemap.d0071e04.svg#sprite-ok"></use>
+                  <use href="assets/spritemap.d0071e04.svg#sprite-ok"></use>
                 </svg>
               </a>
             </li>
@@ -1331,7 +1331,7 @@
               <a class="social__link link" href="https://www.instagram.com/htmlacademy/" aria-label="reddit." target="_blank" rel="noreferrer noopener">
                 <svg class="social__icon" width="26" height="26">
                   <title class="visually-hidden">Иконка соцсети Реддит.</title>
-                  <use href="/assets/spritemap.d0071e04.svg#sprite-reddit"></use>
+                  <use href="assets/spritemap.d0071e04.svg#sprite-reddit"></use>
                 </svg>
               </a>
             </li>
@@ -1350,7 +1350,7 @@
           <span class="visually-hidden">Закрыть.</span>
           <span class="modal__button-icon">
             <svg width="16" height="16" role="img" aria-hidden="true">
-              <use href="/assets/spritemap.d0071e04.svg#sprite-modal-closed"></use>
+              <use href="assets/spritemap.d0071e04.svg#sprite-modal-closed"></use>
             </svg>
           </span>
         </button>
@@ -1395,7 +1395,7 @@
                 <span>Отправить</span>
                 <span class="button__icon">
                   <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
-                    <use href="/assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
+                    <use href="assets/spritemap.d0071e04.svg#sprite-button-arrow"></use>
                   </svg>
                 </span>
               </button>
